# cmake-cpp-project

./: CMakeLists.txt  Makefile  README  README.md
include/common/MyClass/: MyClass.h
src/: CMakeLists.txt  appinfo.h  appinfo.h.in.cmake  main.cpp
src/common/: CMakeLists.txt
src/common/MyClass/: CMakeLists.txt  MyClass.cpp  MyClass.h
test/: CMakeLists.txt  main.cpp  test.h
test/common/MyClass/: CMakeLists.txt  test-MyClass.cpp
